--- a/template.hbs
+++ b/template.hbs
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{{ title }}</title>
-    <link rel="stylesheet" href="../style/markdown.css">
-    <link href="https://cdn.bootcss.com/highlight.js/9.12.0/styles/dracula.min.css" rel="stylesheet">
-    <script src="https://cdn.bootcss.com/highlight.js/9.12.0/highlight.min.js"></script>
+    <link rel="stylesheet" href="../asserts/css/markdown.css">
+    <link href="../asserts/css/dracula.min.css" rel="stylesheet">
+    <script src="../asserts/js/highlight.min.js"></script>
 </head>
 <body>
     {{{ md }}}
